--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  max-width: 100%;
+  width: 1200px;
+  margin: auto;
 }
 
 a {
@@ -13,4 +16,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.title {
+  color: green;
 }
