--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
   max-width: 100%;
   width: 1200px;
   margin: auto;
+  height: 100%;
 }
 
 a {
@@ -18,6 +19,6 @@ a {
   box-sizing: border-box;
 }
 
-.title {
-  color: green;
+#__next {
+  height: 100%;
 }
